<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.jvanauke.MainActivity" >

    <!-- TODO your layout here -->

    <Button
        android:id="@+id/bu_start_over"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@color/salmon"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="150dp"
        android:padding="@dimen/padding"
        android:text="@string/start_over"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lblLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lblMatch1"
        android:layout_alignEnd="@+id/matchTxtView"
        android:layout_alignLeft="@+id/lblMatch1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/matchTxtView"
        android:layout_alignStart="@+id/lblMatch1"
        android:layout_marginBottom="15dp
        "
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/lblMatch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/matchlbl"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/matchTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblMatch1"
        android:layout_alignBottom="@+id/lblMatch1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/lblMatch1"
        android:layout_toRightOf="@+id/lblMatch1"
        android:lineSpacingExtra="30dp"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/lblCongrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bu_start_over"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:text="@string/congrats"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>